--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -67,6 +67,10 @@ hr.star-primary:after {
 .img-centered {
   margin: 0 auto;
 }
+.my-pic {
+  border-radius: 50%;
+  border: 1px solid darkblue;
+}
 header {
   text-align: center;
   background: #7BAFD4;
@@ -208,7 +212,6 @@ section.success {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .caption {
-  /*background: rgba(24, 188, 156, 0.9);*/
   background: rgba(123, 175, 212, 0.9);
   position: absolute;
   width: 100%;
