--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -385,7 +385,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-success.active,
 .open .dropdown-toggle.btn-success {
   color: white;
-  background-color: #128f76;
+  background-color: #2C3E50;
   border-color: #11866f;
 }
 .btn-success:active,
