--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -69,11 +69,12 @@ hr.star-primary:after {
 }
 .my-pic {
   border-radius: 50%;
-  border: 2px solid #2C3E50;
+  border: 3px solid #2C3E50;
 }
 header {
   text-align: center;
-  background: #7BAFD4;
+  background: radial-gradient(circle, #7BAFD4, #2C3E50);
+  /*background: #7BAFD4;*/
   color: white;
 }
 header .container {
@@ -190,7 +191,8 @@ section h2 {
   font-size: 3em;
 }
 section.success {
-  background: #7BAFD4;
+  /*background: #7BAFD4;*/
+  background: radial-gradient(circle, #7BAFD4, #2C3E50);
   color: white;
 }
 @media (max-width: 767px) {
