--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -54,7 +54,7 @@ hr.star-light {
   border-color: white;
 }
 hr.star-light:after {
-  background-color: #7BAFD4;
+  background-color: #2C3E50;
   color: white;
 }
 hr.star-primary {
@@ -69,7 +69,7 @@ hr.star-primary:after {
 }
 .my-pic {
   border-radius: 50%;
-  border: 3px solid #2C3E50;
+  border: 2px solid #2C3E50;
 }
 header {
   text-align: center;
