changed pic, moved tech section

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -69,7 +69,7 @@ hr.star-primary:after {
 }
 .my-pic {
   border-radius: 50%;
-  border: 2px solid #2C3E50;
+  border: 2px solid white;
 }
 header {
   text-align: center;
@@ -369,7 +369,9 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
   background-color: #2C3E50;
+  /*background-color: white;*/
   border-color: #2C3E50;
+  /*border-color: white;*/
 }
 .btn-primary .badge {
   color: #2C3E50;
