--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -69,7 +69,7 @@ hr.star-primary:after {
 }
 .my-pic {
   border-radius: 50%;
-  border: 2px solid white;
+  border: 2px solid #2C3E50;
 }
 header {
   text-align: center;
